AW-2: Added JWT authentication, added OAuth 1.0a authentication for USOS

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -7,5 +7,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UsosClientOptions": {
+    "BaseApiAddress": "https://usosapps.umk.pl/",
+    "RequestTokenEndpoint": "/services/oauth/request_token",
+    "AuthorizeEndpoint": "/services/oauth/authorize",
+    "AccessTokenEndpoint": "/services/oauth/access_token",
+    "CallbackEndpoint": "/authorize",
+    "CourseKey": "0800-AW",
+    "DefaultAdministratorEmail": "286267@stud.umk.pl"
+  }
 }
