--- a/lib/NCU.AnnualWorks.Authentication/NCU.AnnualWorks.Authentication.csproj
+++ b/lib/NCU.AnnualWorks.Authentication/NCU.AnnualWorks.Authentication.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.2" />
