AW-3: Full login/logout process, me control, authentication and personalization providers

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -10,13 +10,16 @@
   "AllowedHosts": "*",
   "UsosServiceOptions": {
     "BaseApiAddress": "https://usosapps.umk.pl/",
+    "LogoutAddress": "https://login.umk.pl/logout",
     "DefaultScopes": [
+      "email",
       "photo",
       "studies"
     ],
     "UsosFields": {
       "Users": [
         "id",
+        "email",
         "first_name",
         "last_name",
         "photo_urls[200x200]"
