--- a/src/NCU.AnnualWorks/ClientApp/package.json
+++ b/src/NCU.AnnualWorks/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.14.0",
+    "@fluentui/react-hooks": "^8.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -19,8 +20,10 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
