--- a/lib/NCU.AnnualWorks.Authentication.JWT/NCU.AnnualWorks.Authentication.JWT.csproj
+++ b/lib/NCU.AnnualWorks.Authentication.JWT/NCU.AnnualWorks.Authentication.JWT.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NCU.AnnualWorks.Authentication.JWT.Core\NCU.AnnualWorks.Authentication.JWT.Core.csproj" />
   </ItemGroup>
 
