--- a/lib/NCU.AnnualWorks.Integrations.Usos.Core/NCU.AnnualWorks.Integrations.Usos.Core.csproj
+++ b/lib/NCU.AnnualWorks.Integrations.Usos.Core/NCU.AnnualWorks.Integrations.Usos.Core.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
