--- a/lib/NCU.AnnualWorks.Integrations.Usos/NCU.AnnualWorks.Integrations.Usos.csproj
+++ b/lib/NCU.AnnualWorks.Integrations.Usos/NCU.AnnualWorks.Integrations.Usos.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.14" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.14" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
-    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
