--- a/src/NCU.AnnualWorks/ClientApp/package.json
+++ b/src/NCU.AnnualWorks/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ncu.annualworks",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.14.0",
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.23",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^15.0.1",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^17.0.4",
@@ -23,6 +24,7 @@
     "i18next": "^20.2.2",
     "i18next-browser-languagedetector": "^6.1.0",
     "jwt-decode": "^3.1.2",
+    "mime-types": "^2.1.30",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
