--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -14,7 +14,9 @@
     "DefaultScopes": [
       "email",
       "photo",
-      "studies"
+      "studies",
+      "other_emails",
+      "staff_perspective"
     ],
     "UsosFields": {
       "Users": [
@@ -30,6 +32,7 @@
       "Authorize": "/services/oauth/authorize",
       "AccessToken": "/services/oauth/access_token",
       "RevokeToken": "/services/oauth/revoke_token",
+      "TermsTerm": "/services/terms/term",
       "TermsSearch": "/services/terms/search",
       "UsersUser": "/services/users/user",
       "UsersUsers": "/services/users/users",
