AW-27: Database clean up and update, added repository, added user controller

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -43,7 +43,7 @@
     },
     "CallbackEndpoint": "/authorize",
     "CourseCode": "0800-PRACMGR-2",
-    "DefaultAdministratorEmail": "286267@stud.umk.pl",
+    "DefaultAdministratorUsosId": "215340",
     "DateFormatPattern": "yyyy-MM-dd"
   }
 }
