AW-25: Updated database schema, thesis create/edit/get API, updated react forms for adding thesis

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -43,7 +43,14 @@
     },
     "CallbackEndpoint": "/authorize",
     "CourseCode": "0800-PRACMGR-2",
-    "DefaultAdministratorUsosId": "215340",
+    "CourseUrl": "",
     "DateFormatPattern": "yyyy-MM-dd"
+  },
+  "ApplicationOptions": {
+    "AllowedFileExtensions": [ "pdf" ],
+    "MaxFileCount": 10,
+    "MaxFileSize": 10000000, //In bytes
+    "DefaultAdministratorUsosId": "215340",
+    "MaxAuthorCount": 2
   }
 }
