--- a/src/NCU.AnnualWorks/ClientApp/package.json
+++ b/src/NCU.AnnualWorks/ClientApp/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.5.3",
     "react-i18next": "^11.8.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
