AW-25: Adding and listing theses

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -51,6 +51,7 @@
     "MaxFileCount": 10,
     "MaxFileSize": 10000000, //In bytes
     "DefaultAdministratorUsosId": "215340",
-    "MaxAuthorCount": 2
+    "MaxAuthorCount": 2,
+    "FileStoragePath":  "files" //Relative path to app directory
   }
 }
