--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -11,3 +11,7 @@ REACT_APP_API_TERMS_CURRENT=/api/terms/current
 REACT_APP_API_USERS_STUDENTS=/api/users/students
 REACT_APP_API_USERS_EMPLOYEES=/api/users/employees
 REACT_APP_API_USERS_ADMINS=/api/users/admins
+REACT_APP_API_THESES=/api/theses
+REACT_APP_API_THESES_PROMOTED=/api/theses/promoted
+REACT_APP_API_THESES_REVIEWED=/api/theses/reviewed
+REACT_APP_API_THESES_AUTHORED=/api/theses/authored
