AW-25: Thesis editing, form overhaul, auth claims and policies overhaul, database seeding and automigration

--- a/lib/NCU.AnnualWorks.Integrations.Usos/NCU.AnnualWorks.Integrations.Usos.csproj
+++ b/lib/NCU.AnnualWorks.Integrations.Usos/NCU.AnnualWorks.Integrations.Usos.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth.Core\NCU.AnnualWorks.Authentication.OAuth.Core.csproj" />
+    <ProjectReference Include="..\NCU.AnnualWorks.Core\NCU.AnnualWorks.Core.csproj" />
     <ProjectReference Include="..\NCU.AnnualWorks.Integrations.Usos.Core\NCU.AnnualWorks.Integrations.Usos.Core.csproj" />
   </ItemGroup>
 
