--- a/src/NCU.AnnualWorks/NCU.AnnualWorks.csproj
+++ b/src/NCU.AnnualWorks/NCU.AnnualWorks.csproj
@@ -25,8 +25,12 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="files\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="files\**" />
+    <EmbeddedResource Remove="files\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="files\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
