--- a/src/NCU.AnnualWorks/appsettings.Production.json
+++ b/src/NCU.AnnualWorks/appsettings.Production.json
@@ -6,5 +6,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "UsosServiceOptions": {
+    "CourseCode": "2404-P-3L-PE-Sj",
+    "CourseUrl": "https://usosweb.umk.pl/kontroler.php?_action=katalog2/przedmioty/pokazPrzedmiot&prz_kod=2404-P-3L-PE-Sj"
   }
 }
