AW-25, AW-9, AW-32: Clean up, review add/edit process, redirections, logging, global exception handling

--- a/lib/NCU.AnnualWorks.Core/NCU.AnnualWorks.Core.csproj
+++ b/lib/NCU.AnnualWorks.Core/NCU.AnnualWorks.Core.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\NCU.AnnualWorks.Authentication.JWT.Core\NCU.AnnualWorks.Authentication.JWT.Core.csproj" />
     <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth.Core\NCU.AnnualWorks.Authentication.OAuth.Core.csproj" />
+    <ProjectReference Include="..\NCU.AnnualWorks.Integrations.Usos.Core\NCU.AnnualWorks.Integrations.Usos.Core.csproj" />
   </ItemGroup>
 
 </Project>
