--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -17,3 +17,4 @@ REACT_APP_API_THESES_REVIEWED=/api/theses/reviewed
 REACT_APP_API_THESES_AUTHORED=/api/theses/authored
 REACT_APP_API_QUESTIONS=/api/questions
 REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
+REACT_APP_API_REVIEWS=/api/reviews
