AW-25: File downloading, fixes, minor clean up, modals for viewing reviews

--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -18,3 +18,4 @@ REACT_APP_API_THESES_AUTHORED=/api/theses/authored
 REACT_APP_API_QUESTIONS=/api/questions
 REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
 REACT_APP_API_REVIEWS=/api/reviews
+REACT_APP_API_FILES=/api/files
