AW-25: Fixes and changes after review

--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -1,7 +1,7 @@
 REACT_APP_URLS_UMK=https://www.umk.pl/
 REACT_APP_URLS_USOS=http://usosweb.umk.pl/
 REACT_APP_URLS_INSTITUTE_OF_PSYCHOLOGY=http://psychologia.umk.pl/
-REACT_APP_COPYRIGHT=Company Name
+REACT_APP_COPYRIGHT=Instytut Psychologii UMK
 REACT_APP_API_AUTH_AUTHENTICATE=/api/auth/authenticate
 REACT_APP_API_AUTH_AUTHORIZE=/api/auth/authorize
 REACT_APP_API_AUTH_SIGN_OUT=/api/auth/signout
