--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -15,6 +15,7 @@ REACT_APP_API_THESES=/api/theses
 REACT_APP_API_THESES_PROMOTED=/api/theses/promoted
 REACT_APP_API_THESES_REVIEWED=/api/theses/reviewed
 REACT_APP_API_THESES_AUTHORED=/api/theses/authored
+REACT_APP_API_THESES_GRADE=/api/theses/grade
 REACT_APP_API_QUESTIONS=/api/questions
 REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
 REACT_APP_API_REVIEWS=/api/reviews
