AW-25: Admin panel, db model update, minor fixes and changes

--- a/src/NCU.AnnualWorks/appsettings.Production.json
+++ b/src/NCU.AnnualWorks/appsettings.Production.json
@@ -8,7 +8,6 @@
     }
   },
   "UsosServiceOptions": {
-    "CourseCode": "2404-P-3L-PE-Sj",
-    "CourseUrl": "https://usosweb.umk.pl/kontroler.php?_action=katalog2/przedmioty/pokazPrzedmiot&prz_kod=2404-P-3L-PE-Sj"
+    "CourseCode": "2404-P-3L-PE-Sj"
   }
 }
