AW-25, AW-30: Finished admin panel, fixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   app:
-    image: maissae/ncu-annual-works
+    image: maissae/ncu-annual-works:latest
     ports:
       # Host:Container
       - 80:80
