--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -25,3 +25,5 @@ REACT_APP_API_REVIEWS=/api/reviews
 REACT_APP_API_FILES=/api/files
 REACT_APP_API_DEADLINE=/api/deadline
 REACT_APP_API_COURSE=/api/course
+REACT_APP_API_EXPORT=/api/export
+REACT_APP_API_EXPORT_STATE=/api/export/state
