--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -55,6 +55,6 @@
     "MaxAuthorCount": 2,
     "MaxKeywordCount": 50,
     "FileStoragePath": "files", //Relative path to app directory
-    "DebugMode": true
+    "DebugMode": false
   }
 }
