Added overrides for production configuration

--- a/src/NCU.AnnualWorks/appsettings.Production.json
+++ b/src/NCU.AnnualWorks/appsettings.Production.json
@@ -9,5 +9,9 @@
   },
   "UsosServiceOptions": {
     "CourseCode": "2404-P-3L-PE-Sj"
+  },
+  "ApplicationOptions": {
+    "DefaultAdministratorUsosId": "215340",
+    "DebugMode": false
   }
 }
