Added user context, added ability to hide theses for administrators

--- a/lib/NCU.AnnualWorks.Authentication.JWT.Core/NCU.AnnualWorks.Authentication.JWT.Core.csproj
+++ b/lib/NCU.AnnualWorks.Authentication.JWT.Core/NCU.AnnualWorks.Authentication.JWT.Core.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NCU.AnnualWorks.Authentication.OAuth.Core\NCU.AnnualWorks.Authentication.OAuth.Core.csproj" />
+  </ItemGroup>
+
 </Project>
