Canceling reviews for admins

--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -28,6 +28,7 @@ REACT_APP_API_THESES_SEARCH=/api/theses/search
 REACT_APP_API_QUESTIONS=/api/questions
 REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
 REACT_APP_API_REVIEWS=/api/reviews
+REACT_APP_API_REVIEWS_CANCEL=/api/reviews/cancel
 REACT_APP_API_FILES=/api/files
 REACT_APP_API_DEADLINE=/api/deadline
 REACT_APP_API_COURSE=/api/course
