--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -47,6 +47,7 @@
     "DateFormatPattern": "yyyy-MM-dd"
   },
   "ApplicationOptions": {
+    "ApplicationUrl": "https://localhost:5001/",
     "AllowedThesisFileExtensions": [ "pdf" ],
     "AllowedAdditionalFileExtensions": [ "pdf" ],
     "MaxFileCount": 10,
@@ -55,6 +56,13 @@
     "MaxAuthorCount": 2,
     "MaxKeywordCount": 50,
     "FileStoragePath": "files", //Relative path to app directory
-    "DebugMode": false
+    "DebugMode": true
+  },
+  "EmailServiceOptions": {
+    "Host": "smtp.umk.pl",
+    "Port": 465,
+    "ServiceDisabled": false,
+    "DebugMode": true,
+    "DebugEmail": "286267@stud.umk.pl"
   }
 }
