Added email sending on thesis added

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -47,7 +47,7 @@
     "DateFormatPattern": "yyyy-MM-dd"
   },
   "ApplicationOptions": {
-    "ApplicationUrl": "https://localhost:5001/",
+    "ApplicationUrl": "https://localhost:5001",
     "AllowedThesisFileExtensions": [ "pdf" ],
     "AllowedAdditionalFileExtensions": [ "pdf" ],
     "MaxFileCount": 10,
