--- a/src/NCU.AnnualWorks/appsettings.Production.json
+++ b/src/NCU.AnnualWorks/appsettings.Production.json
@@ -11,7 +11,7 @@
     "CourseCode": "2404-P-3L-PE-Sj"
   },
   "ApplicationOptions": {
-    "ApplicationUrl": "https://pr.psychologia.umk.pl/",
+    "ApplicationUrl": "https://pr.psychologia.umk.pl",
     "DefaultAdministratorUsosId": "215340",
     "DebugMode": false
   },
