--- a/lib/NCU.AnnualWorks.Integrations.Email/NCU.AnnualWorks.Integrations.Email.csproj
+++ b/lib/NCU.AnnualWorks.Integrations.Email/NCU.AnnualWorks.Integrations.Email.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.15.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.14" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.14" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NCU.AnnualWorks.Core\NCU.AnnualWorks.Core.csproj" />
     <ProjectReference Include="..\NCU.AnnualWorks.Integrations.Email.Core\NCU.AnnualWorks.Integrations.Email.Core.csproj" />
   </ItemGroup>
 
