Added backup scheduler

--- a/src/NCU.AnnualWorks/appsettings.Production.json
+++ b/src/NCU.AnnualWorks/appsettings.Production.json
@@ -17,5 +17,8 @@
   },
   "EmailServiceOptions": {
     "DebugMode": false
+  },
+  "BackupSchedulerOptions": {
+    "MysqlDumpPath": "/bin/mysqldump"
   }
 }
