--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -64,5 +64,8 @@
     "ServiceDisabled": false,
     "DebugMode": true,
     "DebugEmail": "286267@stud.umk.pl"
+  },
+  "BackupSchedulerOptions": {
+    "MysqlDumpPath": "C:\\Program Files\\MySQL\\MySQL Server 8.0\\bin\\mysqldump.exe"
   }
 }
