Added partial implementation for additional thesis files

--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -30,6 +30,7 @@ REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
 REACT_APP_API_REVIEWS=/api/reviews
 REACT_APP_API_REVIEWS_CANCEL=/api/reviews/cancel
 REACT_APP_API_FILES=/api/files
+REACT_APP_API_FILES_THESIS=/api/files/thesis
 REACT_APP_API_DEADLINE=/api/deadline
 REACT_APP_API_COURSE=/api/course
 REACT_APP_API_EXPORT=/api/export
