Added question updating form for administrators

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -61,7 +61,7 @@
   "EmailServiceOptions": {
     "Host": "smtp.umk.pl",
     "Port": 465,
-    "ServiceDisabled": false,
+    "ServiceDisabled": true,
     "DebugMode": true,
     "DebugEmail": "286267@stud.umk.pl"
   },
