Added review question update in case of invalid question list

--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -29,6 +29,8 @@ REACT_APP_API_QUESTIONS=/api/questions
 REACT_APP_API_QUESTIONS_ACTIVE=/api/questions/active
 REACT_APP_API_REVIEWS=/api/reviews
 REACT_APP_API_REVIEWS_CANCEL=/api/reviews/cancel
+REACT_APP_API_REVIEWS_VALIDATE_QUESTIONS=/api/reviews/validateQuestions
+REACT_APP_API_REVIEWS_UPDATE_QUESTIONS=/api/reviews/updateQuestions
 REACT_APP_API_FILES=/api/files
 REACT_APP_API_FILES_THESIS=/api/files/thesis
 REACT_APP_API_DEADLINE=/api/deadline
