Fixed exception throw when course is inactive

--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -37,6 +37,7 @@
       "UsersUser": "/services/users/user",
       "UsersUsers": "/services/users/users",
       "UsersSearch": "/services/users/search2",
+      "CoursesCourse": "/services/courses/course",
       "CoursesCourseEdition": "services/courses/course_edition",
       "CoursesIsCoordinator": "services/courses/is_coordinator",
       "CoursesIsLecturer": "services/courses/is_lecturer",
@@ -56,7 +57,7 @@
     "MaxAuthorCount": 2,
     "MaxKeywordCount": 50,
     "FileStoragePath": "files", //Relative path to app directory
-    "DebugMode": true
+    "DebugMode": false
   },
   "EmailServiceOptions": {
     "Host": "smtp.umk.pl",
