--- a/src/NCU.AnnualWorks/ClientApp/.env
+++ b/src/NCU.AnnualWorks/ClientApp/.env
@@ -8,6 +8,7 @@ REACT_APP_API_AUTH_SIGN_OUT=/api/auth/signout
 REACT_APP_API_KEYWORDS=/api/keywords
 REACT_APP_API_TERMS=/api/terms
 REACT_APP_API_TERMS_CURRENT=/api/terms/current
+REACT_APP_API_TERMS_CURRENT_YEAR=/api/terms/currentyear
 REACT_APP_API_TERMS_ALL=/api/terms/all
 REACT_APP_API_USERS_BASE=/api/users
 REACT_APP_API_USERS_STUDENTS=/api/users/students
