--- a/src/NCU.AnnualWorks/appsettings.json
+++ b/src/NCU.AnnualWorks/appsettings.json
@@ -57,7 +57,7 @@
     "MaxAuthorCount": 2,
     "MaxKeywordCount": 50,
     "FileStoragePath": "files", //Relative path to app directory
-    "DebugMode": false
+    "DebugMode": true
   },
   "EmailServiceOptions": {
     "Host": "smtp.umk.pl",
